:unicorn: Added new routes
