# api/swagger/swagger.json
@@ -301,6 +301,33 @@
         }
       }
     },
+    "/sendReminderEmail.do": {
+      "post": {
+        "operationId": "Send Reminder Email",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/SendReminderEmailRequest"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "update next review date",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/SendReminderEmail"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/getRejectReasons.do": {
       "post": {
         "operationId": "get reject reasons",
@@ -311,6 +338,33 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/RejectReasons"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/addCustomerNotes.do": {
+      "post": {
+        "operationId": "Add Customer Notes",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/AddCustomerNotesRequest"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "Add Customer Notes",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AddCustomerNotes"
                 }
               }
             }
@@ -393,39 +447,51 @@
             "type": "integer",
             "description": "Internal customer request unique id",
             "example": 1001
-          },
-          "recommendedCreditLimit": {
-            "$ref": "#/components/schemas/Currency"
-          },
-          "approvedCreditLimit": {
-            "$ref": "#/components/schemas/Currency"
-          },
-          "riskClass": {
-            "$ref": "#/components/schemas/RiskClass"
-          },
-          "createdDate": {
-            "type": "string",
-            "example": "2019-04-12T00:00:00.000Z"
-          },
-          "timeLapsed": {
-            "type": "string",
-            "example": "toDay"
-          },
-          "bankReference": {
-            "type": "string",
-            "example": "Available"
-          },
-          "tradeReference": {
-            "type": "string",
-            "example": "Pending"
-          },
-          "applicationInfo": {
-            "type": "array",
-            "description": "application information",
-            "items": {
-              "$ref": "#/components/schemas/ApplicationInfo"
-            }
           }
+        }
+      },
+      "recommendedCreditLimit": {
+        "type": "array",
+        "description": "Credit limit recommended by system",
+        "items": {
+          "$ref": "#/components/schemas/Currency"
+        }
+      },
+      "approvedCreditLimit": {
+        "type": "array",
+        "description": "Credit limit approved",
+        "items": {
+          "$ref": "#/components/schemas/Currency"
+        }
+      },
+      "riskClass": {
+        "type": "array",
+        "description": "calculated risk class for customer",
+        "items": {
+          "$ref": "#/components/schemas/RiskClass"
+        }
+      },
+      "createdDate": {
+        "type": "string",
+        "example": "2019-04-12T00:00:00.000Z"
+      },
+      "timeLapsed": {
+        "type": "string",
+        "example": "toDay"
+      },
+      "bankReference": {
+        "type": "string",
+        "example": "Available"
+      },
+      "tradeReference": {
+        "type": "string",
+        "example": "Pending"
+      },
+      "applicationInfo": {
+        "type": "array",
+        "description": "application information",
+        "items": {
+          "$ref": "#/components/schemas/ApplicationInfo"
         }
       },
       "ApplicationInfo": {
@@ -519,7 +585,11 @@
             "example": "Ready To Review"
           },
           "CompanyInfo": {
-            "$ref": "#/components/schemas/CompanyInfo"
+            "type": "array",
+            "description": "company information",
+            "items": {
+              "$ref": "#/components/schemas/CompanyInfo"
+            }
           }
         }
       },
@@ -602,7 +672,11 @@
             "example": 60
           },
           "riskClass": {
-            "$ref": "#/components/schemas/RiskClass"
+            "type": "array",
+            "description": "calculated risk class for customer",
+            "items": {
+              "$ref": "#/components/schemas/RiskClass"
+            }
           },
           "scoreCardDetails": {
             "type": "array",
@@ -771,10 +845,18 @@
         "type": "object",
         "properties": {
           "requestedCreditLimit": {
-            "$ref": "#/components/schemas/Currency"
+            "type": "array",
+            "description": "credit limit requested by customer",
+            "items": {
+              "$ref": "#/components/schemas/Currency"
+            }
           },
           "recommendedCreditLimit": {
-            "$ref": "#/components/schemas/Currency"
+            "type": "array",
+            "description": "recommended credit limit by system",
+            "items": {
+              "$ref": "#/components/schemas/Currency"
+            }
           },
           "insights": {
             "type": "array",
@@ -1162,6 +1244,213 @@
               "Already filed for Bankruptcy",
               "Customer has not provided adequate credit info"
             ]
+          }
+        }
+      },
+      "SendReminderEmail": {
+        "type": "object",
+        "properties": {
+          "title": {
+            "type": "string",
+            "description": "Title",
+            "example": "Bank"
+          },
+          "referenceDetails": {
+            "type": "array",
+            "description": "Reference Details",
+            "items": {
+              "$ref": "#/components/schemas/ReferenceDetails"
+            }
+          }
+        }
+      },
+      "ReferenceDetails": {
+        "type": "object",
+        "properties": {
+          "referenceName": {
+            "type": "string",
+            "description": "Reference Name",
+            "example": "Bank Reference"
+          },
+          "isVerified": {
+            "type": "boolean",
+            "description": "Is Verified",
+            "example": true
+          },
+          "isReminderSent": {
+            "type": "boolean",
+            "description": "Is Reminder Sent (If it is true, sendReminder button will be disabled)",
+            "example": true
+          },
+          "address": {
+            "type": "array",
+            "description": "Reference Address",
+            "items": {
+              "$ref": "#/components/schemas/Address"
+            }
+          },
+          "summaryLog": {
+            "type": "array",
+            "description": "Summary Log",
+            "items": {
+              "$ref": "#/components/schemas/SummaryLog"
+            }
+          },
+          "fields": {
+            "type": "array",
+            "description": "Fields",
+            "items": {
+              "$ref": "#/components/schemas/Fields"
+            }
+          }
+        }
+      },
+      "Address": {
+        "type": "object",
+        "properties": {
+          "addressLine1": {
+            "type": "string",
+            "description": "Address Line1",
+            "example": "DLF gate 1"
+          },
+          "addressLine2": {
+            "type": "string",
+            "description": "Address Line2",
+            "example": "DLF gate 2"
+          },
+          "street": {
+            "type": "string",
+            "description": "Street",
+            "example": "Gachibowli"
+          },
+          "city": {
+            "type": "string",
+            "description": "City",
+            "example": "Hyderabad"
+          },
+          "state": {
+            "type": "string",
+            "description": "State",
+            "example": "Telangana"
+          },
+          "country": {
+            "type": "string",
+            "description": "Country",
+            "example": "India"
+          },
+          "zip": {
+            "type": "string",
+            "description": "Zip",
+            "example": "12345"
+          },
+          "phoneNumber": {
+            "type": "string",
+            "description": "Phone Number",
+            "example": "1234561234"
+          },
+          "emailId": {
+            "type": "string",
+            "description": "Email Id",
+            "example": "abc.ds@highradius.com"
+          }
+        }
+      },
+      "SummaryLog": {
+        "type": "object",
+        "properties": {
+          "summaryType": {
+            "type": "string",
+            "description": "Summary Type",
+            "enum": [
+              "CORRESPONDENCE",
+              "PROCESSING",
+              "WORKFLOW",
+              "REFERENCE"
+            ]
+          },
+          "summary": {
+            "type": "string",
+            "description": "Summary",
+            "example": "abc"
+          },
+          "createUser": {
+            "type": "string",
+            "description": "Create User",
+            "example": "Admin Lonza"
+          },
+          "createDate": {
+            "type": "string",
+            "description": "Create Date",
+            "example": "2017-07-31T03:00:00.000Z"
+          }
+        }
+      },
+      "Fields": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string",
+            "description": "Field Name",
+            "example": "Company Name"
+          },
+          "value": {
+            "type": "object",
+            "description": "Field Value",
+            "example": "HighRadius"
+          },
+          "type": {
+            "type": "string",
+            "description": "Field Type",
+            "enum": [
+              "string",
+              "number",
+              "amount"
+            ]
+          }
+        }
+      },
+      "SendReminderEmailRequest": {
+        "type": "object",
+        "properties": {
+          "creditRequestId": {
+            "type": "integer"
+          },
+          "referenceType": {
+            "type": "string",
+            "enum": [
+              "Bank",
+              "Trade"
+            ]
+          }
+        }
+      },
+      "AddCustomerNotesRequest": {
+        "type": "object",
+        "properties": {
+          "fkCustomerMapId": {
+            "type": "integer"
+          },
+          "pkCamMapCreditRequestId": {
+            "type": "integer"
+          },
+          "notes": {
+            "type": "string"
+          },
+          "subject": {
+            "type": "string"
+          }
+        }
+      },
+      "AddCustomerNotes": {
+        "type": "object",
+        "properties": {
+          "success": {
+            "type": "boolean",
+            "example": true
+          },
+          "msg": {
+            "type": "string",
+            "example": "Successfully Added Notes"
           }
         }
       }
